objects/PC_Document_Management_Components__mdt.object
<CustomObject>
    <description>Metadata to hold lightning components shown on Document Management module</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this component is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Component_Name__c</fullName>
        <description>Lightning component name</description>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Ordinal__c</fullName>
        <description>Order in which component should display. 1 means first.</description>
        <label>Ordinal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Management Component</label>
    <pluralLabel>Document Management Components</pluralLabel>
</CustomObject>